auth/deployment.yaml
---
apiVersion: extensions/v1beta1
kind: Deployment
metadata:
 name: auth-deployment
 namespace: staging
 labels:
   app: auth-deploy
spec:
  replicas: 1
  template:
    metadata:
      name: auth-pod-template
      labels:
        app: auth
    spec:
      containers:
        - name: auth
          image: 986381756175.dkr.ecr.us-east-1.amazonaws.com/labsoft-2018/auth:latest
          imagePullPolicy: Always
