auth/service.yaml
---
kind: Service
apiVersion: v1
metadata:
  name: auth-service
spec:
  selector:
    app: auth
  ports:
  - protocol: TCP
    port: 80
    targetPort: 8080
  type: LoadBalancer
